# ConvertApp

./: .clangd  .gitignore  CMakeLists.txt  start_files.sh  watch_files.sh
.cache/clangd/index/: Utils.hpp.6229E9AB3CCFC624.idx  VideoConvert.cpp.2AA03022BB0EA3E7.idx  VideoConvert.hpp.37C43D0DAD10BF02.idx  main.cpp.3A81A7ECF0278DE6.idx  utils.cpp.D134700009846F10.idx
include/: ImageConvert.hpp  Utils.hpp  VideoConvert.hpp
include/exceptions/: InvalidExtensionException.hpp  InvalidFileException.hpp  InvalidPathException.hpp
src/: ImageConvert.cpp  Utils.cpp  VideoConvert.cpp  main.cpp
